# Adaptive-Streaming-Covariance

./: .gitignore  README.md  pyproject.toml
src/ascov/: __init__.py  covariance.py
tests/: test_covariance.py
